syntax="proto3";

// Interface exported by the worker node.
service WorkerService {
    rpc IsNodePresent(IsNodePresentRequest) returns (IsNodePresentResponse);
    rpc UpdateDjikstra(stream RequestDjikstra) returns (stream ResponseDjikstra);
}

message IsNodePresentRequest {
    uint32 node_id = 1;
}

message IsNodePresentResponse {
    bool present = 1;
}

message RequestDjikstra {
    message NewMyElement {
        uint64 node_id = 1;
        uint64 shortest_path_len = 2;
    }

    message SmallestForeginElement {
        uint64 shortest_path_len = 1;
    }

    // First message in the stream must be `request_id`.
    // Message `new_my` may appear multiple times in the stream.
    // Last message must be `smallest_foreign`.
    oneof RequestType {
        uint32 request_id = 1;
        NewMyElement new_my_el = 2;
        SmallestForeginElement smallest_foreign_el = 3;
    }
}

message ResponseDjikstra {
    message NewForeignElement {
        uint64 node_id = 1;
        uint32 worker_id = 2;
        uint64 shortest_path_len = 3;
    }

    message SmallestMyElement {
        uint64 shortest_path_len = 1;
    }

    // Message `new_foreign` may appear multiple times in the stream.
    // Last message must be `smallest_my`.
    oneof ResponseType {
        NewForeignElement new_foreign_el = 1;
        SmallestMyElement smallest_my_el = 2;
    }
}

